@@ -415,4 +415,5 @@
 	* NSH now supports last exit status $?
 	* NSH now supports if-then[-else]-fi construct
 	* NSH now supports comments beginning with '#'
+	* NSH now supports commands to inspect and modify memory
 
